tests/machine/x/kotlin/short_circuit.error
line 61:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/short_circuit.kt:61:10: error: a type annotation is required on a value parameter
fun boom(a, b): Boolean {
         ^
/workspace/mochi/tests/machine/x/kotlin/short_circuit.kt:61:13: error: a type annotation is required on a value parameter
fun boom(a, b): Boolean {
            ^

 60: 
 61: fun boom(a, b): Boolean {
 62:     println("boom")
